<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/et_operator_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/et_operator_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Result"
        android:textAlignment="center"
        android:textSize="25sp" />

    <LinearLayout
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <Button
        android:id="@+id/btn_add"
        android:text="+"
        style="@style/style_btns" />
    <Button
        android:id="@+id/btn_sub"
        style="@style/style_btns"
        android:text="-" />
    <Button
        android:id="@+id/btn_mul"
        style="@style/style_btns"
        android:text="*" />
    <Button
        android:id="@+id/btn_div"
        style="@style/style_btns"
        android:text="/" />
    </LinearLayout>
    <Button
        style="@style/style_btns"
        android:layout_gravity="center"
        android:text="Reverse"
        android:id="@+id/btn_reverse"/>

</LinearLayout>